RESOLVED FIXED261563
[iOS] Cannot scroll page by dragging on a bare <video> element
https://bugs.webkit.org/show_bug.cgi?id=261563
Summary [iOS] Cannot scroll page by dragging on a bare <video> element
Jer Noble
Reported 2023-09-14 10:33:40 PDT
[iOS] Cannot scroll page by dragging on a bare <video> element
Attachments
Jer Noble
Comment 1 2023-09-14 10:33:43 PDT
Jer Noble
Comment 2 2023-09-14 10:39:17 PDT
EWS
Comment 3 2023-09-15 15:41:12 PDT
Committed 268041@main (960e0d109099): <https://commits.webkit.org/268041@main> Reviewed commits have been landed. Closing PR #17777 and removing active labels.
Jer Noble
Comment 4 2023-09-27 22:40:34 PDT
EWS
Comment 5 2023-09-28 00:05:56 PDT
Committed 268566@main (7fa44a650d9a): <https://commits.webkit.org/268566@main> Reviewed commits have been landed. Closing PR #18299 and removing active labels.
Alexey Proskuryakov
Comment 6 2023-11-29 14:17:06 PST
*** Bug 261950 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.